<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">LoL Counter</string>
    <string name="cache_name">CacheLoLProfile</string>
    <string name="shared_preferences_name">SharedPreferencesLoLProfile</string>
    <string name="base_url_champion_gg">https://api.champion.gg/v2/</string>
    <string name="base_url_rito">https://lol.momotoria.es/</string>
    <string name="base_url_champion_image">https://ddragon.leagueoflegends.com/cdn/9.2.1/img/champion/%s</string>
    <string name="base_url_champion_splash">https://ddragon.leagueoflegends.com/cdn/img/champion/splash/%s_%s.jpg</string>

    <!-- TOOLBAR -->
    <string name="toolbar_elevation">4dp</string>
    <string name="content_description_champion_image_placeholder">Champion\'s placeholder image</string>
    <string name="content_description_sad_face">An error has occurred :(</string>
    <string name="activity_home_title">Champions</string>
    <string name="key_seconds_last_request">UnixSecondsLastRequest</string>
    <string name="content_description_background">Nice LoL related background image</string>
    <string name="menu_champions_label">Champions</string>
    <string name="menu_summoner_label">Summoner</string>
    <string name="menu_option_label">Options</string>
    <string name="menu_search_label">Search</string>
    <string name="transition_champion_details">Champion\'s transition</string>
    <string name="textView_counter_label">Counters</string>
    <string name="textView_goodAgainst_label">Good against</string>
    <string name="textView_lore_label">Lore</string>
    <string name="menu_details_bronze_label">BRONZE</string>
    <string name="menu_details_silver_label">SILVER</string>
    <string name="menu_details_gold_label">GOLD</string>
    <string name="menu_details_platinum_label">PLATINUM</string>
    <string name="menu_details_high_elo_label">HIGH ELO</string>
    <string name="champion_games">%s games</string>
    <string name="champion_win_rate">%s%% WR</string>
    <string name="champion_kda">%s/%s/%s</string>
    <string name="counter_champion_rate_wins">%s%% - %s wins</string>
    <string name="elo_key_bronze">BRONZE</string>
    <string name="elo_key_silver">SILVER</string>
    <string name="elo_key_gold">GOLD</string>
    <string name="elo_key_platinum">PLATINUM</string>
    <string name="elo_key_high_elo"></string>
    <string name="no_counters_found">There is no counters info for ELO selected :(</string>
    <string name="elo_default_key">SILVER</string>
    <string name="message_data_not_found_in_bundle">No data found in bundle! :S</string>
    <string name="message_data_not_found_in_server">LP001 - Error retrieving Champions from server. Code was OK but no data was found! :(</string>
    <string name="message_data_not_found_in_server_details">LP002 - Error retrieving Champions from server. Code was OK but no data was found! :(</string>
    <string name="options_delete_saved_data_title">Delete saved data</string>
    <string name="options_delete_saved_data_description">The app stores some ordinary data/don\'t usually change (as champion names, avatar, description, etc.) in order to save MB/Internet request. Check this option if you want to delete it all.</string>
    <string name="options_choose_default_elo_title">Choose default ELO</string>
    <string name="options_choose_default_elo_description">App\'s default ELO is SILVER. You can choose whatever you want to show first by selecting one here.</string>
    <string name="key_default_stored_elo">defaultELOString</string>
    <string name="options_dialog_delete_title">Delete</string>
    <string name="options_dialog_delete_description">Are you sure you want to delete stored data?</string>
    <string name="options_dialog_delete_positive_text">Sure</string>
    <string name="options_dialog_delete_negative_text">Nope</string>
    <string name="options_message_data_deleted">All data was deleted</string>
    <string name="string_key_not_found">NOPE</string>
    <string name="options_choose_default_row_number_title">Number of rows (details)</string>
    <string name="options_choose_row_number_description">Define the number of rows shown in champion\'s detail. As League of Legends has a huge amount of champions, there is no logic reason to show all other champions WR percentage. Rows are limited between 2 and 4 (6 up to 12 champions being shown).</string>
    <string name="key_default_stored_row_number">defaultRowNumber</string>
    <string name="row_number_default_key">2</string>
    <string name="menu_order_label">Order</string>
    <string name="textView_noInfo_badAgainst">There is no public information on Champion.gg API about which champions are strong against %s :(</string>
    <string name="textView_noInfo_goodAgainst">There is no public information on Champion.gg API about which champions are weak against %s :(</string>
    <string name="textViewTipsLabel">Tips:</string>
</resources>
